# ccdi-dcc-federation-service

./: .env.example  .gitignore  CCDI-Federation-API.postman_collection.json  Dockerfile  README.md  docker-compose.yml  graphql-to-rest-design.md  pyproject.toml  requirements.txt  swagger.yml
app/: main.py
app/api/v1/: deps.py
app/api/v1/endpoints/: files.py  metadata.py  namespaces.py  samples.py  subjects.py
app/core/: cache.py  config.py  logging.py  pagination.py
app/db/: memgraph.py
app/models/: dto.py  errors.py
app/repositories/: file.py  sample.py  subject.py
app/services/: file.py  sample.py  subject.py
